public/css/index.css
/* general */
body {
  margin: 0 0 auto;
  padding: 8px;
}

div.container-centered {
  text-align: center;
}

hr {
  clear: both;
}

/* footer */
div.footer {
  font-size: small;
  clear: both;
}

/* board */
div.mode {
  text-align: center;
  width: 100%;
}

/* post */
div.post {
  display: block;
}

div.post div.reply {
  display: table;
  margin-bottom: 2px;
}

div.post-dash {
  float: left;
  font-weight: bolder;
  font-size: x-large;
}

span.post-board {
  font-weight: bolder;
  font-size: large;
}

span.post-subject {
  font-weight: bolder;
  font-size: large;
}

span.post-name {
  font-weight: bold;
}

div.file-info {
  display: block;
}

div.file-thumb {
  display: block;
  float: left;
  margin-right: 25px;
}

div.file-thumb img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

div.post-info {
  display: inline-block;
}

span.post-id a {
  color: inherit;
  text-decoration: none;
}

span.post-id a:hover {
  font-weight: bold;
}

div.post div.post-message-wrapper {
  display: block;
}

div.reply div.post-message-wrapper {
  display: block;
  margin-left: 25px;
}

div.post-message {
  display: block;
  margin: 1em 0px;
}

.catalog {
  &__single {
    float: left;
    height: 200px;
    width: 200px;
    text-align: center;
    margin: 10px;

    &__file-thumb {
      width: 100%;
      height: 100px;
      margin: 0 0 10px 0;
      a > img {
        max-height: 100px;
        margin-left: auto;
        margin-right: auto;
        display: block;
      }
    }

    &__reply-count {
      font-weight: bold;
    }
  }
}

/* postform */
form.postform {
  display: inline-block;
  text-align: left;
}

div.postform-group {
  margin-top: 2px;
}

div.postform-group label {
  display: inline-block;
  width: 128px;
  height: 23px;
}

div.postform-group label.postform-message-label {
  vertical-align: top;
}

/* menubar */
div.menubar div.boardlist {
  float: left;
  text-align: left;
}

div.menubar div.boardmenu {
  float: right;
  text-align: right;
}

/* dropdown menu */
a.dd-menu-btn {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  transition: transform 0.1s;
}

a.dd-menu-btn-open {
  transform: rotate(90deg);
}

div.dd-menu {
  position: absolute;
}

div.dd-menu ul {
  list-style: none;
  padding: 0;
  margin: 0;
  white-space: nowrap;
}

div.dd-menu li {
  cursor: pointer;
  position: relative;
  padding: 2px 4px;
}

/* post preview */
div.post-preview {
  position: absolute;
}

div.post-preview > div.post {
  display: table;
  margin-bottom: 0px;
}

div.post-preview > div.post.reply > div.reply  {
  margin-bottom: 0px;
}

/* reportform */
form.reportform select {
  width: 100%;
}

